# tap-twitter

./: .gitignore  README.md  pyproject.toml  tap-twitter.sh  tox.ini
.github/workflows/: ci_workflow.yml
tap_twitter/: client.py  streams.py  tap.py
tap_twitter/schemas/: tweets.schema.json  users.schema.json
tap_twitter/tests/: __init__.py  test_core.py
